--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -2,7 +2,7 @@ name: DEV - Deploy to Nomad Cluster
 
 on:
   push:
-    branches: [ develop,master ]
+    #branches: [ develop,master ]
     
 env:
   # Organization Secrets
