--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name _;
 
-    root public;
+    #root public;
     index index.html;
 
     # Send all single page app paths to index.html
