--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -2,7 +2,7 @@ name: Update PR Description with Commit Messages
 
 on:
   pull_request_target:
-    types: [opened, synchronize]
+    types: [opened, reopen, synchronize]
 
 jobs:
   update-description:
