--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -30,14 +30,14 @@ jobs:
           # 현재 PR의 설명을 가져옵니다.
           PR_DESCRIPTION=$(gh pr view ${{ github.event.pull_request.number }} --repo ${{ github.repository }} --json body -q .body)
 
-          PR_HEADER=$(echo "$PR_DESCRIPTION" | sed '/### Commit Messages/q')
-          UPDATED_DESCRIPTION="${PR_HEADER}### Commit Messages \n${{ steps.get-commit-messages.outputs.messages }}"
+          # PR_HEADER=$(echo "$PR_DESCRIPTION" | sed '/### Commit Messages/q')
+          # UPDATED_DESCRIPTION="${PR_HEADER}### Commit Messages \n${{ steps.get-commit-messages.outputs.messages }}"
 
-          # # 새로운 내용을 추가합니다. 커밋 메시지를 포함시킵니다.
-          # UPDATED_DESCRIPTION="${PR_DESCRIPTION}
-          # ---
-          # ### Commit Messages
-          # ${{ steps.get-commit-messages.outputs.messages }}"
+          # 새로운 내용을 추가합니다. 커밋 메시지를 포함시킵니다.
+          UPDATED_DESCRIPTION="${PR_DESCRIPTION}
+          ---
+          ### Commit Messages
+          ${{ steps.get-commit-messages.outputs.messages }}"
 
           # PR의 설명을 업데이트합니다.
           gh pr edit ${{ github.event.pull_request.number }} --repo ${{ github.repository }} --body "$UPDATED_DESCRIPTION"
