--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -27,6 +27,7 @@ jobs:
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
+          echo "Requesting summary from OpenAI..."
           response=$(curl -s -X POST "https://api.openai.com/v1/completions" \
             -H "Content-Type: application/json" \
             -H "Authorization: Bearer $OPENAI_API_KEY" \
@@ -36,8 +37,10 @@ jobs:
               \"temperature\": 0.7,
               \"max_tokens\": 150
             }")
+          echo "Response: $response"
           summary=$(echo $response | jq -r '.choices[0].text')
           echo "::set-output name=summary::$summary"
+
           
       - name: Update PR description
         env:
