--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -27,19 +27,38 @@ jobs:
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
-          echo "Requesting summary from OpenAI..."
+          # JSON 요청 본문을 파일로 작성
+          cat > payload.json <<EOF
+          {
+            "model": "text-davinci-003",
+            "prompt": "다음은 GitHub Commit 메시지이다. 요약해줘:\n${{ steps.get-commit-messages.outputs.messages }}",
+            "temperature": 0.7,
+            "max_tokens": 150
+          }
+          EOF
+        
+          # 파일을 사용하여 OpenAI에 요청
           response=$(curl -s -X POST "https://api.openai.com/v1/completions" \
             -H "Content-Type: application/json" \
             -H "Authorization: Bearer $OPENAI_API_KEY" \
-            --data "{
-              \"model\": \"text-davinci-003\",
-              \"prompt\": \"다음은 GitHub Commit 메시지이다. 요약해줘:\\n${{ steps.get-commit-messages.outputs.messages }}\",
-              \"temperature\": 0.7,
-              \"max_tokens\": 150
-            }")
+            -d @payload.json)
           echo "Response: $response"
           summary=$(echo $response | jq -r '.choices[0].text')
           echo "::set-output name=summary::$summary"
+        # run: |
+        #   echo "Requesting summary from OpenAI..."
+        #   response=$(curl -s -X POST "https://api.openai.com/v1/completions" \
+        #     -H "Content-Type: application/json" \
+        #     -H "Authorization: Bearer $OPENAI_API_KEY" \
+        #     --data "{
+        #       \"model\": \"text-davinci-003\",
+        #       \"prompt\": \"다음은 GitHub Commit 메시지이다. 요약해줘:\\n${{ steps.get-commit-messages.outputs.messages }}\",
+        #       \"temperature\": 0.7,
+        #       \"max_tokens\": 150
+        #     }")
+        #   echo "Response: $response"
+        #   summary=$(echo $response | jq -r '.choices[0].text')
+        #   echo "::set-output name=summary::$summary"
 
           
       - name: Update PR description
