--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -30,7 +30,7 @@ jobs:
           # JSON 요청 본문을 파일로 작성
           cat > payload.json <<EOF
           {
-            "model": "text-davinci-003",
+            "model": "gpt-3.5-turbo-1106",
             "prompt": "다음은 GitHub Commit 메시지이다. 요약해줘:\n${{ steps.get-commit-messages.outputs.messages }}",
             "temperature": 0.7,
             "max_tokens": 150
