--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -31,7 +31,7 @@ jobs:
           cat > payload.json <<EOF
           {
             "model": "gpt-3.5-turbo",
-            "message": "다음은 GitHub Commit 메시지이다. 요약해줘:\n${{ steps.get-commit-messages.outputs.messages }}",
+            "messages": "다음은 GitHub Commit 메시지이다. 요약해줘:\n${{ steps.get-commit-messages.outputs.messages }}",
             "temperature": 0.7,
             "max_tokens": 150
           }
