--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -31,7 +31,16 @@ jobs:
           cat > payload.json <<EOF
           {
             "model": "gpt-3.5-turbo",
-            "messages": ["다음은 GitHub Commit 메시지이다. 요약해줘:\n${{ steps.get-commit-messages.outputs.messages }}"],
+            "messages": [
+              {
+                "role": "system",
+                "content": "You are a helpful assistant."
+              },
+              {
+                "role": "user",
+                "content": "다음은 GitHub Commit 메시지이다. 요약해줘:\n${{ steps.get-commit-messages.outputs.messages }}"
+              }
+            ],
             "temperature": 0.7,
             "max_tokens": 150
           }
