--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -37,7 +37,7 @@ jobs:
               },
               {
                 "role": "user",
-                "content": "아래는 GitHub에서의 최근 커밋 메시지들입니다. 각 커밋의 주요 내용을 요약하고, 전체적인 변경 사항에 대한 개요를 제공해주세요. 또한 다른 사람이 읽었을 때 가독성이 좋도록 해주고, 최대한 한 줄로 간단 명료하게 요약해주세요. 커밋 메시지들은 다음과 같습니다:\n${{ steps.get-commit-messages.outputs.messages }}"
+                "content": "아래는 GitHub에서의 최근 커밋 메시지(title, body)들입니다. 각 커밋의 주요 내용을 요약하고, 전체적인 변경 사항에 대한 개요를 한 줄로 제공해주세요.  커밋 메시지들은 다음과 같습니다:\n${{ steps.get-commit-messages.outputs.messages }}"
               }
             ],
             "temperature": 0.7,
