--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -59,7 +59,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          comment_id=$(gh pr view ${{ github.event.pull_request.number }} --repo ${{ github.repository }} --json comments -q '.comments[].id' | jq 'select(.body | contains("PR Check List"))' | jq '.id')
+          comment_id=$(gh pr view ${{ github.event.pull_request.number }} --repo ${{ github.repository }} --json comments -q '.comments[].id' | jq 'select(.body | contains("<!-- Auto PR Summary Marker -->"))' | jq '.id')
           if [ ! -z "$comment_id" ]; then
             gh api -X DELETE /repos/${{ github.repository }}/issues/comments/$comment_id
           fi
@@ -74,7 +74,8 @@ jobs:
           
           UPDATED_DESCRIPTION="${PR_DESCRIPTION}
           ---
-
+          <!-- Auto PR Summary Marker -->
+          
           ✅  PR Check List
           - [ ] Self code review finished
           - [ ] Spotless / static analysis finished
