--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -62,7 +62,7 @@ jobs:
           comments=$(gh issue view ${{ github.event.pull_request.number }} --repo ${{ github.repository }} --json comments)
           echo "$comments" | jq -c '.comments[] | select(.body | contains("<!-- Auto PR Summary Marker -->")) | .id' | while read -r comment_id; do
             echo "Deleting comment ID: $comment_id"
-            gh api -X DELETE /repos/${{ github.repository }}/issues/comments/$comment_id
+            gh api -X DELETE /repos/${{ github.repository }}/pulls/comments/$comment_id
           done
       
       - name: Update PR description
