--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -16,11 +16,37 @@ jobs:
       - name: Get Commit Messages
         id: get-commit-messages
         run: |
+          # 커밋 메시지를 추출합니다.
           commit_messages=$(git log --reverse --format='%B%n' origin/${{ github.base_ref }}..origin/${{ github.head_ref }})
-          commit_messages="${commit_messages//'%'/'%25'}"
-          commit_messages="${commit_messages//$'\n'/'%0A'}"
-          commit_messages="${commit_messages//$'\r'/'%0D'}"
-          echo "::set-output name=messages::$commit_messages"
+          
+          # Markdown 형식으로 포맷팅합니다.
+          formatted_messages=""
+          IFS=$'\n\n' # 커밋 메시지들을 분리하는 구분자를 설정합니다.
+          for message in $commit_messages; do
+            # 커밋 메시지의 첫 줄(제목)을 추출합니다.
+            title=$(echo "$message" | head -n 1)
+            # 커밋 메시지의 나머지 부분(본문)을 추출합니다.
+            body=$(echo "$message" | tail -n +2)
+            
+            # Markdown 형식으로 포맷팅합니다.
+            if [ ! -z "$body" ]; then
+              formatted_messages+="- **$title**\n  - $body\n\n"
+            else
+              formatted_messages+="- **$title**\n\n"
+            fi
+          done
+          
+          # 포맷팅된 메시지를 출력 변수로 설정합니다.
+          formatted_messages="${formatted_messages//'%'/'%25'}"
+          formatted_messages="${formatted_messages//$'\n'/'%0A'}"
+          formatted_messages="${formatted_messages//$'\r'/'%0D'}"
+          echo "::set-output name=formatted_messages::$formatted_messages"
+        # run: |
+        #   commit_messages=$(git log --reverse --format='%B%n' origin/${{ github.base_ref }}..origin/${{ github.head_ref }})
+        #   commit_messages="${commit_messages//'%'/'%25'}"
+        #   commit_messages="${commit_messages//$'\n'/'%0A'}"
+        #   commit_messages="${commit_messages//$'\r'/'%0D'}"
+        #   echo "::set-output name=messages::$commit_messages"
           
       - name: Ask ChatGPT for Summary
         id: chatgpt
@@ -37,7 +63,7 @@ jobs:
               },
               {
                 "role": "user",
-                "content": "아래는 GitHub에서의 최근 커밋 메시지(title, body)들입니다. 각 커밋의 주요 내용을 요약하고, 전체적인 변경 사항에 대한 개요를 한 줄로 제공해주세요.  커밋 메시지들은 다음과 같습니다:\n${{ steps.get-commit-messages.outputs.messages }}"
+                "content": "다음은 GitHub에서의 최근 커밋 메시지(title, body)들입니다. 각 커밋의 내용을 요약하고, 전체적인 변경 사항에 대한 개요를 한 줄로 제공해주세요. MD파일 양식으로 작성되므로 title은 -**[TITLE]**, body는 >[BODY] 규격에 맞게 작성합니다. 커밋 메시지들은 다음과 같습니다:\n${{ steps.get-commit-messages.outputs.messages }}"
               }
             ],
             "temperature": 0.7,
@@ -102,10 +128,9 @@ jobs:
           - 없음
 
           # 🙏 To Reviewer
-          - 쿼리파라미터 입력 추가 건입니다. 로직은 동일합니다.
+          - 없음
 
           # 🎫 Ticket 
-          [CMP-551]: https://lgu-cto.atlassian.net/browse/CMP-551
-          [CMP-552]: https://lgu-cto.atlassian.net/browse/CMP-552"
+          "
 
           gh pr edit ${{ github.event.pull_request.number }} --repo ${{ github.repository }} --body "$UPDATED_DESCRIPTION"
