--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -15,32 +15,70 @@ jobs:
           
       - name: Get Commit Messages
         id: get-commit-messages
-        run: |
-          # 커밋 메시지를 추출합니다.
-          commit_messages=$(git log --reverse --format='%B%n' origin/${{ github.base_ref }}..origin/${{ github.head_ref }})
+        # run: |
+        #   # 커밋 메시지를 추출합니다.
+        #   commit_messages=$(git log --reverse --format='%B%n' origin/${{ github.base_ref }}..origin/${{ github.head_ref }})
           
-          # Markdown 형식으로 포맷팅합니다.
+        #   # Markdown 형식으로 포맷팅합니다.
+        #   formatted_messages=""
+        #   IFS=$'\n\n' # 커밋 메시지들을 분리하는 구분자를 설정합니다.
+        #   for message in $commit_messages; do
+        #     # 커밋 메시지의 첫 줄(제목)을 추출합니다.
+        #     title=$(echo "$message" | head -n 1)
+        #     # 커밋 메시지의 나머지 부분(본문)을 추출합니다.
+        #     body=$(echo "$message" | tail -n +2)
+            
+        #     # Markdown 형식으로 포맷팅합니다.
+        #     if [ ! -z "$body" ]; then
+        #       formatted_messages+="- **$title**\n  - $body\n\n"
+        #     else
+        #       formatted_messages+="- **$title**\n\n"
+        #     fi
+        #   done
+          
+        #   # 포맷팅된 메시지를 출력 변수로 설정합니다.
+        #   formatted_messages="${formatted_messages//'%'/'%25'}"
+        #   formatted_messages="${formatted_messages//$'\n'/'%0A'}"
+        #   formatted_messages="${formatted_messages//$'\r'/'%0D'}"
+        #   echo "::set-output name=formatted_messages::$formatted_messages"
+        run: |
+          IFS=$'\n\n' # 커밋 메시지 단위로 분리합니다.
+          commit_messages=$(git log --reverse --format='%B%n' origin/${{ github.base_ref }}..origin/${{ github.head_ref }})
           formatted_messages=""
-          IFS=$'\n\n' # 커밋 메시지들을 분리하는 구분자를 설정합니다.
-          for message in $commit_messages; do
-            # 커밋 메시지의 첫 줄(제목)을 추출합니다.
-            title=$(echo "$message" | head -n 1)
-            # 커밋 메시지의 나머지 부분(본문)을 추출합니다.
+        
+          readarray -t messages <<<"$commit_messages" # 커밋 메시지를 배열로 변환합니다.
+          for message in "${messages[@]}"; do
+            if [[ -z "$message" ]]; then
+              continue # 빈 메시지는 건너뜁니다.
+            fi
+            
+            # 제목과 본문을 분리합니다.
+            title=$(echo "$message" | head -n1)
             body=$(echo "$message" | tail -n +2)
             
-            # Markdown 형식으로 포맷팅합니다.
-            if [ ! -z "$body" ]; then
-              formatted_messages+="- **$title**\n  - $body\n\n"
+            # 본문이 있는 경우, 본문의 각 항목을 처리합니다.
+            if [[ ! -z "$body" ]]; then
+              body_lines=""
+              IFS=$'\n' # 본문 내부의 개행으로 분리합니다.
+              readarray -t lines <<<"$body"
+              for line in "${lines[@]}"; do
+                if [[ -z "$line" ]]; then
+                  continue
+                fi
+                body_lines+="  - $line\n"
+              done
+              formatted_messages+="- **$title**\n$body_lines\n"
             else
               formatted_messages+="- **$title**\n\n"
             fi
           done
-          
-          # 포맷팅된 메시지를 출력 변수로 설정합니다.
+        
+          # 포맷팅된 커밋 메시지를 GitHub Actions의 출력 변수로 설정합니다.
           formatted_messages="${formatted_messages//'%'/'%25'}"
           formatted_messages="${formatted_messages//$'\n'/'%0A'}"
           formatted_messages="${formatted_messages//$'\r'/'%0D'}"
           echo "::set-output name=formatted_messages::$formatted_messages"
+
         # run: |
         #   commit_messages=$(git log --reverse --format='%B%n' origin/${{ github.base_ref }}..origin/${{ github.head_ref }})
         #   commit_messages="${commit_messages//'%'/'%25'}"
