--- a/.github/workflows/commit-msg-to-pr.yml
+++ b/.github/workflows/commit-msg-to-pr.yml
@@ -15,36 +15,6 @@ jobs:
           
       - name: Get Commit Messages
         id: get-commit-messages
-        run: |
-          # 커밋 메시지를 추출합니다.
-          commit_messages=$(git log --reverse --format='%B%n' origin/${{ github.base_ref }}..origin/${{ github.head_ref }})
-
-          commit_messages="${commit_messages//'%'/'%25'}"
-          commit_messages="${commit_messages//$'\n'/'%0A'}"
-          commit_messages="${commit_messages//$'\r'/'%0D'}"
-        
-          # Markdown 형식으로 포맷팅합니다.
-          formatted_messages=""
-          IFS=$'%0A' # 커밋 메시지들을 분리하는 구분자를 설정합니다.
-          for message in $commit_messages; do
-            # 커밋 메시지의 첫 줄(제목)을 추출합니다.
-            title=$(echo "$message" | head -n 1)
-            # 커밋 메시지의 나머지 부분(본문)을 추출합니다.
-            body=$(echo "$message" | tail -n +2)
-            
-            # Markdown 형식으로 포맷팅합니다.
-            if [ ! -z "$body" ]; then
-              formatted_messages+="- **$title**%0A  - $body\n\n"
-            else
-              formatted_messages+="- **$title**%0A%0A"
-            fi
-          done
-          
-          # 포맷팅된 메시지를 출력 변수로 설정합니다.
-          formatted_messages="${formatted_messages//'%'/'%25'}"
-          formatted_messages="${formatted_messages//$'\n'/'%0A'}"
-          formatted_messages="${formatted_messages//$'\r'/'%0D'}"
-          echo "::set-output name=messages::$formatted_messages"
         # run: |
         #   IFS=$'\n\n' # 커밋 메시지 단위로 분리합니다.
         #   commit_messages=$(git log --reverse --format='%B%n' origin/${{ github.base_ref }}..origin/${{ github.head_ref }})
@@ -82,12 +52,12 @@ jobs:
         #   formatted_messages="${formatted_messages//$'\n'/'%0A'}"
         #   formatted_messages="${formatted_messages//$'\r'/'%0D'}"
         #   echo "::set-output name=messages::$formatted_messages"
-        # run: |
-        #   commit_messages=$(git log --reverse --format='%B%n' origin/${{ github.base_ref }}..origin/${{ github.head_ref }})
-        #   commit_messages="${commit_messages//'%'/'%25'}"
-        #   commit_messages="${commit_messages//$'\n'/'%0A'}"
-        #   commit_messages="${commit_messages//$'\r'/'%0D'}"
-        #   echo "::set-output name=messages::$commit_messages"
+        run: |
+          commit_messages=$(git log --reverse --format='%B%n' origin/${{ github.base_ref }}..origin/${{ github.head_ref }})
+          commit_messages="${commit_messages//'%'/'%25'}"
+          commit_messages="${commit_messages//$'\n'/'%0A'}"
+          commit_messages="${commit_messages//$'\r'/'%0D'}"
+          echo "::set-output name=messages::$commit_messages"
           
       - name: Ask ChatGPT for Summary
         id: chatgpt
